--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost/library"
     username: "root"
-    password: "Handong1234!"
+    password: "handong1234"
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
